# pdfoffset

./: CMakeLists.txt  README.md
misc/: copy_release_binary.bat
src/: pdfoffset.cpp  pdfoffset.rc  pdfoffsetcore.cpp  pdfoffsetcore.h  ui.fl
